<resources>
    <string name="app_name">Strange Music</string>

    <string name="continuar">CONTINUAR</string>
    <string name="bienvenido">BIENVENIDO!</string>
    <string name="usuario">Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="iniciar_sesion">INICIAR SESION</string>
    <string name="olvidaste_tu_contraseña">Olvidaste tu contraseña</string>
    <string name="bienvenida">STRANGE MUSIC</string>
    <string name="bienvida_strange">¡Aquí encontrarás el ritmo perfecto para cada momento. Sumérgete en un mundo lleno de melodías y descubre tu nueva banda sonora. ¡Disfruta de la experiencia musical que siempre has deseado!</string>
    <string name="profile">Profile</string>
    <string name="notificacion">Notificacion</string>
    <string name="Calendario">Calendario</string>
    <string name="Galeria">Galeria</string>
    <string name="my_playlist">My Playlist</string>
    <string name="share">Share</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="search">Search</string>
    <string name="favoritos">Favoritos</string>
    <string name="Mensajes">Mensajes</string>
    <string name="Home">Home</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Ajustes">Configuracion</string>
    <string name="Configuracion">Configuración</string>
    <string name="title_configuración">Configuración</string>
    <string name="contraseña">Contraseña</string>
    <string name="Telefono">Telefono</string>
    <string name="nombres">Nombres</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="agregar">Agregar</string>
    <string name="fecha_nacimiento">Fecha nacimiento</string>
    <string name="actualizar_datos">Actualizar datos</string>
    <string name="perfil">Perfil</string>
    <string name="registrate">REGISTRATE</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="buscar_cuenta">Buscar cuenta</string>
    <string name="hi">Hi,</string>
    <string name="actualiza_tus_datos">Actualiza tus datos</string>
    <string name="music">MUSIC</string>
    <string name="terminos_condiciones">Aceptar terminos y condiciones</string>

    <string name="no_tienes_imagenes_en_galeria">No tienes imagenes en tu galeria</string>
</resources>