<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".Login.Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clGoHome"
        android:background="@drawable/rendondo"
        android:backgroundTint="@color/secondary"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:onClick="goMain">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/imageViewSelected"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo"
        app:civ_border_color="@color/black"
        app:civ_border_width="4dp"
        app:civ_shadow="false" />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="10dp"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/email"
        android:hint="@string/usuario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/lock"
        android:hint="@string/Contraseña">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/iniciar_sesion"
        android:layout_marginHorizontal="20dp"
        android:onClick="login"
        android:layout_marginTop="30dp">
    </com.google.android.material.button.MaterialButton>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goOlvidatePassword"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/olvidaste_tu_contraseña"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:onClick="registro"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:textSize="15sp"
            android:text="@string/no_tienes_cuenta"
            android:textAlignment="textEnd" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:textColor="@color/secondary"
            android:textStyle="bold"
            android:textSize="17sp"
            android:text="@string/registrate"
            android:textAlignment="textStart" />


    </LinearLayout>
    </LinearLayout>
</LinearLayout >