<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".Home.ui.configurations.Perfil.Perfil">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/view2"
                    android:layout_width="wrap_content"
                    android:layout_height="350dp"
                    android:background="@drawable/top_profile"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clGoHome"
                    android:onClick="goHome"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/background_oval"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:onClick="goHome"
                        android:id="@+id/imageView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/back" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <RelativeLayout
                    android:id="@+id/imageView15"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    app:layout_constraintBottom_toBottomOf="@+id/view2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/view2"
                    app:layout_constraintTop_toTopOf="@+id/view2"
                    app:layout_constraintVertical_bias="0.2">

                    <ImageView
                        android:id="@+id/profilePictureImageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/profile"
                        android:layout_centerInParent="true"/>


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/uploadImageButton"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:translationZ="20dp"
                        android:background="@drawable/background_add_photo"
                        android:layout_alignEnd="@id/profilePictureImageView"
                        android:layout_alignBottom="@id/profilePictureImageView"
                        android:scaleType="centerCrop">

                        <ImageButton
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            app:layout_constraintBottom_toBottomOf="@+id/uploadImageButton"
                            app:layout_constraintEnd_toEndOf="@+id/uploadImageButton"
                            app:layout_constraintStart_toStartOf="@+id/uploadImageButton"
                            app:layout_constraintTop_toTopOf="@+id/uploadImageButton"
                            app:srcCompat="@drawable/camera" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </RelativeLayout>

                <TextView
                    android:id="@+id/tvNamePrincipal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" "
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginTop="30dp"
                    app:layout_constraintEnd_toEndOf="@+id/imageView15"
                    app:layout_constraintStart_toStartOf="@+id/imageView15"
                    app:layout_constraintTop_toBottomOf="@+id/imageView15" />

                <TextView
                    android:id="@+id/tvCorreoElectronico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/tvNamePrincipal"
                    app:layout_constraintStart_toStartOf="@+id/tvNamePrincipal"
                    app:layout_constraintTop_toBottomOf="@+id/tvNamePrincipal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/white_background_profile"
                    android:elevation="5dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/view2"
                    app:layout_constraintTop_toBottomOf="@+id/tvCorreoElectronico">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:textColor="@color/black"
                            android:layout_marginStart="20dp"
                            android:text="@string/nombres"/>

                        <EditText
                            android:id="@+id/etName"
                            android:inputType="text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:hint="@string/agregar"
                            android:layout_marginEnd="30dp"
                            android:layout_weight="1" />


                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:textColor="@color/black"
                            android:layout_marginStart="20dp"
                            android:text="@string/Telefono"/>

                        <EditText
                            android:id="@+id/etNumberTelefono"
                            android:inputType="number"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:hint="@string/agregar"
                            android:layout_marginEnd="30dp"
                            android:layout_weight="1" />


                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:textColor="@color/black"
                            android:layout_marginStart="20dp"
                            android:text="@string/usuario"/>

                        <EditText
                            android:id="@+id/textEmailAddress"
                            android:inputType="textEmailAddress"
                            android:layout_width="0dp"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:enabled="false"
                            android:hint="@string/agregar"
                            android:layout_marginEnd="30dp"
                            android:layout_weight="1" />


                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:textColor="@color/black"
                            android:layout_marginStart="20dp"
                            android:text="@string/contraseña"/>

                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:hint="@string/agregar"
                            android:layout_marginEnd="30dp"
                            android:layout_weight="1" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:textColor="@color/black"
                            android:layout_marginStart="20dp"
                            android:text="@string/fecha_nacimiento"/>

                        <EditText
                            android:id="@+id/etFechaNacimiento"
                            android:inputType="none"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:hint="@string/agregar"
                            android:calendarTextColor="@android:color/black"
                            android:layout_marginEnd="30dp"
                            android:imeOptions="actionNext"
                            android:clickable="false"
                            android:datePickerMode="spinner"
                            android:focusable="false"
                            android:layout_weight="1" />





                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="60dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/actualizar_datos"
                        android:layout_marginHorizontal="20dp"
                        android:onClick="goUpdateData">
                    </com.google.android.material.button.MaterialButton>


                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>



    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>